--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "roco-front-end",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "private": true,
   "dependencies": {
     "@babel/core": "7.1.0",
@@ -24,6 +24,7 @@
     "emotion-theming": "^9.2.9",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
+    "enzyme-to-json": "^3.3.4",
     "eslint-config-react-app": "^3.0.3",
     "eslint-loader": "2.1.1",
     "eslint-plugin-flowtype": "2.50.1",
@@ -54,7 +55,6 @@
     "react-emotion": "^9.2.12",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.4.0-beta.1",
-    "react-test-renderer": "^16.5.2",
     "redux": "^4.0.0",
     "redux-devtools": "^3.4.1",
     "redux-saga": "^0.16.2",
@@ -127,7 +127,12 @@
       "react-app"
     ],
     "plugins": [
-      "emotion"
+      [
+        "emotion",
+        {
+          "sourceMap": true
+        }
+      ]
     ]
   },
   "devDependencies": {
